@@ -3,6 +3,9 @@ Changes for Perl Application Development and Refactoring Environment
 0.55 To Be Released
     - Add full list of file types to the View Document As menu (SZABGAB)
     - dist-zilla projects detection finally fixed (#489) (JQUELIN)
+    - Saving files to somewhere other than the current project will now
+      correctly flush the document project state, and triggers a directory
+      tree flush so that we communicate the change in project (ADAMK)
 
 0.54 2010.01.07
     - Added experimental support for clickable filenames in Output panel.
